// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get user 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {},
}
`;

exports[`Get user after updating 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`Update user 1`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {
    "hello": "world",
  },
}
`;

exports[`signIn() 1`] = `
Object {
  "access_token": Any<String>,
  "expires_at": Any<Number>,
  "expires_in": Any<Number>,
  "refresh_token": Any<String>,
  "token_type": "bearer",
  "user": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": Any<String>,
    "confirmed_at": Any<String>,
    "created_at": Any<String>,
    "email": Any<String>,
    "id": Any<String>,
    "last_sign_in_at": Any<String>,
    "role": "",
    "updated_at": Any<String>,
    "user_metadata": Object {},
  },
}
`;

exports[`signIn() 2`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": Object {},
}
`;

exports[`signOut 1`] = `
Object {
  "error": null,
}
`;

exports[`signUp() 1`] = `
Object {
  "access_token": Any<String>,
  "expires_at": Any<Number>,
  "expires_in": Any<Number>,
  "refresh_token": Any<String>,
  "token_type": "bearer",
  "user": Object {
    "app_metadata": Object {
      "provider": "email",
    },
    "aud": Any<String>,
    "confirmed_at": Any<String>,
    "created_at": Any<String>,
    "email": Any<String>,
    "id": Any<String>,
    "last_sign_in_at": Any<String>,
    "role": "",
    "updated_at": Any<String>,
    "user_metadata": null,
  },
}
`;

exports[`signUp() 2`] = `
Object {
  "app_metadata": Object {
    "provider": "email",
  },
  "aud": Any<String>,
  "confirmed_at": Any<String>,
  "created_at": Any<String>,
  "email": Any<String>,
  "id": Any<String>,
  "last_sign_in_at": Any<String>,
  "role": "",
  "updated_at": Any<String>,
  "user_metadata": null,
}
`;
